# SA-PCB

./: -1.pl  .bm1.pl.swp  .gitignore  .gitmodules  .pl  AUTHORS.md  CMakeLists.txt  Dockerfile  Doxyfile  Makefile  Makefile_bu  README.md  accept_ratio.txt  adaptec2.clst  apte.nets  apte.nodes  apte.pl  board.h  board.py  cell.h  cost.txt  do_expts.sh  eagle2kicad.py  evaluate.py  graph.py  ibm01.aux  ibm01.nets  ibm01.nodes  ibm01.pl  load_bookshelf.py  main.cpp  main.h  main2.cpp  make_plots.py  multistart.py  node.h  oa.txt  pcbnew_python  pin.h  plot.py  (+13 more)
cache/: -1.pl
cache_rudy/: 0.txt  10.txt  100.txt  110.txt  120.txt  130.txt  140.txt  150.txt  160.txt  170.txt  180.txt  190.txt  20.txt  200.txt  210.txt  220.txt  230.txt  240.txt  250.txt  260.txt  270.txt  280.txt  290.txt  30.txt  300.txt  310.txt  320.txt  330.txt  340.txt  350.txt  360.txt  370.txt  380.txt  390.txt  40.txt  400.txt  410.txt  420.txt  430.txt  440.txt  (+41 more)
designs/: DaughterBoards_2016.nodes  DaughterBoards_2016.pl  RealTrouble_2016.nets  RealTrouble_2016.nodes  RealTrouble_2016.pl  SuperTrouble2017.nets  SuperTrouble2017.nodes  SuperTrouble2017.pl  SuperTrouble2017_rev.nets  SuperTrouble2017_rev.nodes  SuperTrouble2017_rev.pl  apte.pl  bbb.nets  bbb.nodes  bbb.pl  bbb.wts  s_example.nets  s_example.nodes  s_example.pl  simple_example.nets  simple_example.nodes  simple_example.pl  simple_example.shapes  snake.nets  snake.nodes  snake.pl  snake_backup.nets  temp.nets
designs/BeagleBone/: BeagleBone_Black.routed.kicad_pcb  BeagleBone_Black.unrouted.kicad_pcb
docs/: index.html
docs/html/: _board_8hpp_source.html  _grid_based_placer_8hpp_source.html  _h_placer_utils_8hpp_source.html  _module_8hpp_source.html  _node_8hpp_source.html  _params_8hpp_source.html  _pin_8hpp_source.html  _report_8hpp_source.html  annotated.html  class_board-members.html  class_board.html  class_global_param-members.html  class_global_param.html  class_grid_based_placer-members.html  class_grid_based_placer.html  class_h_placer_utils-members.html  class_h_placer_utils.html  class_hierarchy-members.html  class_hierarchy.html  class_level-members.html  class_level.html  class_module-members.html  class_module.html  class_node-members.html  class_node.html  class_object-members.html  class_object.html  class_params.html  class_pcb_placer_1_1__object.html  class_pcb_placer_1_1_grid_based_placer-members.html  class_pcb_placer_1_1_grid_based_placer.html  class_pin-members.html  class_pin.html  class_plotter-members.html  class_plotter.html  class_point__2_d-members.html  class_point__2_d.html  class_point__3_d-members.html  class_point__3_d.html  class_segment-members.html  (+134 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  (+15 more)
docs/latex/: annotated.tex  class_board.tex  class_global_param.tex  class_grid_based_placer.tex  class_h_placer_utils.tex  class_hierarchy.tex  class_level.tex  class_module.tex  class_node.tex  class_object.tex  class_params.tex  class_pcb_placer_1_1__object.eps  class_pcb_placer_1_1__object.tex  class_pcb_placer_1_1_grid_based_placer.eps  class_pcb_placer_1_1_grid_based_placer.tex  class_pin.tex  class_plotter.tex  class_point__2_d.tex  class_point__3_d.tex  class_segment.tex  class_via.tex  classcomponent.tex  classinstance.tex  classkicad_parser.tex  classkicad_pcb_data_base.tex  classnet.tex  classnetclass.tex  classp_pin.tex  classpadstack.tex  classreport.tex  classrow.tex  classswig_1_1_swig_ptr___py_object.eps  classswig_1_1_swig_ptr___py_object.tex  classutil_1_1_array2_d.tex  classutil_1_1_point.tex  classutil_1_1_rect.tex  classutil_1_1_time_usage.tex  files.tex  hierarchy.tex  ispd2005_8py.tex  (+39 more)
lib/: libPCBPLACER.dylib
module/eagle2bookshelf/: 2590  2590.pl  2590_45.pl  AUTHORS.md  DRU.py  DaughterBoards_2016.asc  PadsASCII2bookshelf.cpp  README.md  bm1_45.brd  bm1_45.pl  bookshelf2eagle.py  eagle2bookself.py  eagle2bookshelf2012.py  eagle2netspec.py  temp.nodes  test2.brd  test3.brd  test4.brd
placements/: bbb.pl  bbb_multilayer.pl  bm1.pl  bm1_45.pl  bm1_final.pl  snake_final.pl  snake_final_45.pl  temp_final.pl
reports/: 2019-06-06._pl.pl  2019-06-10-10-48-37_pl.pl
results/: CMakeCache.txt  l_1.txt  oa_1.txt  temp_1.txt  wl_1.txt
src/: .GridBasedPlacer.cpp.swp  .Logger.hpp.swp  Board.hpp  BoardGrid.cpp  BoardGrid.h  Congestion.hpp  Constraint.hpp  GridBasedPlacer.cpp  GridBasedPlacer.hpp  GridBasedRouter.cpp  GridBasedRouter.h  HPlacerUtils.cpp  HPlacerUtils.hpp  Hierarchy.cpp  Hierarchy.hpp  Logger.hpp  Makefile  Module.cpp  Module.hpp  Node.cpp  Node.hpp  PCBPLACER.py  Params.h  Params.hpp  PcbPlacer.i  PcbPlacer.py  PcbPlacer_wrapper.cpp  Pin.hpp  PlaceDB.hpp  Report.hpp  ]  annealer  globalParam.cpp  globalParam.h  linreg.cpp  linreg.h  main.cpp  main.hpp  output.bm2.unrouted.kicad_pcb  pin.h  (+14 more)
src/backup/: main.hpp
src/py_utils/: board.py  eagle2kicad.py  evaluate.py  graph.py  load_bookshelf.py  make_plots.py  multistart.py  plot.py  translate_bookshelf.py  utils.py
test/: annealer  apte.nets  apte.nodes  apte.pl  run.sh
